--- a/config.ini
+++ b/config.ini
@@ -11,14 +11,14 @@ dirprj = F:\py36_work\nel_len\Проекты\test
 
 [System]
 vzona = 3.0
-zagl = -0.1
+zagl = 0.0
 vz = 1500
 opgl = 0.0
 
 [Preferens]
 d = 1
 t = 0.0
-h = 0.1
+h = 0.0
 
 [Verbose]
 vesible = 0
@@ -31,6 +31,9 @@ av = 0
 [Scale]
 amplscl = 0
 yscroll = 1
+
+[Theme]
+theme = radiance
 
 [Hash]
 md5 = 068da121bb452c27426fbbac2b43e502
